Fix header z-index

--- a/lms/static/sass/_default.scss
+++ b/lms/static/sass/_default.scss
@@ -182,6 +182,7 @@ img#fourth-img {
 }
 
 .header-global {
+  z-index: 101;
   .wrapper-header {
     width: auto;
   }
